# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "./tower-*",
    "./examples/*",
]

default-members = [
    "./tower-*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license = "MIT"

authors = ["Oleh Martsokha <o.martsokha@gmail.com>"]
repository = "https://github.com/xwde/tower"
homepage = "https://github.com/xwde/tower"
documentation = "https://docs.rs/spire"

[workspace.dependencies]
tower = { version = "0.4.13" }
async-trait = { version = "0.1.74" }
pin-project-lite = { version = "0.2.13" }
http = { version = "0.2.9" }

tracing = { version = "0.1.40" }
thiserror = { version = "1.0.50" }

sitemapo = { path = "../kit/inclusion", version = "0.3.0" }
robotxt = { path = "../kit/exclusion", version = "0.6.0" }