# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "tower-crawl"
readme = "./README.md"

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

documentation = "https://docs.rs/tower-crawl"
categories = ["asynchronous", "web-programming"]
keywords = ["crawler", "scraper", "tower"]
description = """
Tower middlewares, adapters and utilities useful for web crawling.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "./lib.rs"

[features]
default = []
full = [
    "exclude",
    "include",
    "load",
]

exclude = ["dep:robotxt", "dep:thiserror"]
include = ["dep:sitemapo", "exclude"]

load = ["tower/load"]
tracing = ["dep:tracing"]
util = []

[dependencies]
tower = { workspace = true }
async-trait = { workspace = true }
pin-project-lite = { workspace = true }
http = { workspace = true }

tracing = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

sitemapo = { workspace = true, optional = true, features = ["tokio"] }
robotxt = { workspace = true, optional = true, features = ["optimal"] }
serde = { version = "1.0.190", features = ["derive"] }
