# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "tower-flow"
readme = "./README.md"

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

documentation = "https://docs.rs/tower-flow"
categories = ["asynchronous", "web-programming"]
keywords = ["crawler", "scraper", "tower"]
description = """
Tower middlewares for data processing.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "./lib.rs"

[features]
default = []
full = []

batch = []
limit = []
report = []
trace = ["dep:tracing"]

tracing = ["dep:tracing"]
util = []

[dependencies]
tower = { workspace = true }
async-trait = { workspace = true }
pin-project-lite = { workspace = true }
tracing = { workspace = true, optional = true }